# ======================================================================================================================================
# general project settings
# ======================================================================================================================================

cmake_minimum_required(VERSION 3.5)

project("cSamples")

message(STATUS "processing CMakeLists of project:${CMAKE_PROJECT_NAME} within folder:${CMAKE_CURRENT_LIST_DIR}")

# ======================================================================================================================================
# include directories
# ======================================================================================================================================

include_directories(${CMAKE_CURRENT_LIST_DIR}/common/include)

# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================

# general files
file(GLOB HS_C_SAMPLE_SRC
     "*.c"
     "*.h")

# ======================================================================================================================================
# add relevant sub directories -- invoke their CMakeLists.txt files
# ======================================================================================================================================

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/common ${CMAKE_CURRENT_LIST_DIR}/../../../build/playGround)

# ======================================================================================================================================
# create the main executable
# ======================================================================================================================================

add_executable(cSampleExe ${HS_C_SAMPLE_SRC})

# ======================================================================================================================================
# link the main executable with all relevant libraries
# ======================================================================================================================================

target_link_libraries(cSampleExe commonCSamplesUtilities commonInfraUtilities)

                    
