# ======================================================================================================================================
# general project settings
# ======================================================================================================================================

cmake_minimum_required(VERSION 3.5)

project("cppSamples")

message(STATUS "processing CMakeLists of project:${CMAKE_PROJECT_NAME} within folder:${CMAKE_CURRENT_LIST_DIR}")

# ======================================================================================================================================
# include directories
# ======================================================================================================================================

include_directories(${CMAKE_CURRENT_LIST_DIR}/vptrInClassVsStructInC)

# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================

# general files
file(GLOB HS_SAMPLE_SRC
    "*.c"
    "*.cpp")

# virtual pointer example files
file(GLOB HS_VPTR_IN_C_STRUCT_USAGE_EXAMPLE_SRC
    "${CMAKE_CURRENT_LIST_DIR}/vptrInClassVsStructInC/*.c"
    "${CMAKE_CURRENT_LIST_DIR}/vptrInClassVsStructInC/*.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/vptrInClassVsStructInC/*.h")

# ======================================================================================================================================
# add relevant sub directories -- invoke their CMakeLists.txt files
# ======================================================================================================================================


# ======================================================================================================================================
# create the main executable
# ======================================================================================================================================

add_executable(cppSampleExe ${HS_SAMPLE_SRC} ${HS_VPTR_IN_C_STRUCT_USAGE_EXAMPLE_SRC})

# ======================================================================================================================================
# link the main executable with all relevant libraries
# ======================================================================================================================================

target_link_libraries(cppSampleExe commonInfraUtilities)

                    
