# ======================================================================================================================================
# general project settings
# ======================================================================================================================================

cmake_minimum_required(VERSION 3.5)

project("processMemoryUsageWindows")

message(STATUS "processing CMakeLists of project:${CMAKE_PROJECT_NAME} within folder:${CMAKE_CURRENT_LIST_DIR}")

#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_DIR})
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_DIR})

# ======================================================================================================================================
# include directories
# ======================================================================================================================================


# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================

file(GLOB PROCCESS_MEMORY_USAGE_WINDOWS_EXE_SRC
    "${CMAKE_CURRENT_LIST_DIR}/*.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/*.h")

# ======================================================================================================================================
# add relevant sub directories -- invoke their CMakeLists.txt files
# ======================================================================================================================================

# lib1 
#add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/exeFolder/lib1 /${CMAKE_CURRENT_LIST_DIR}/build)

# ======================================================================================================================================
# create the main executable
# ======================================================================================================================================

add_executable(processMemoryUsageWindowsExe ${PROCCESS_MEMORY_USAGE_WINDOWS_EXE_SRC})

# ======================================================================================================================================
# link the main executable with all relevant libraries
# ======================================================================================================================================
          